Working: Create reproduction
With Ember 3.20.3 adding new models works and clearing them works as
well.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,7 @@
 <h2 id="title">Welcome to Ember</h2>
 
-{{outlet}}
+<div>
+  Comments: {{this.model.comments.length}}
+  {{log this.model.comments}}
+</div>
+<Changer @post={{this.model}} />
